--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "clean": "shx rm -rf ./built/*",
     "build": "npm-run-all -s format-json build:**",
     "format-json": "node ./format-json.js",
-    "build:es6": "tsc --project ./tsconfig.es6.json",
-    "build:cjs": "tsc --project ./tsconfig.cjs.json",
+    "build:es6": "tsc --project ./tsconfig.es6.json && cp -R src/data built/es6/",
+    "build:cjs": "tsc --project ./tsconfig.cjs.json && cp -R src/data built/cjs/",
     "test": "jest --config jest.config.js tests/*.js",
     "pretty": "prettier --write \"./**/*.ts\""
   },
