Remove use of `require`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,14 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
+    "esModuleInterop": true,
     "listEmittedFiles": true,
     "moduleResolution": "node",
     "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "removeComments": true,
+    "resolveJsonModule": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
