--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "reverse geocoder",
     "country codes",
     "ISO 3166-1",
-    "geolocation"
+    "geolocation",
+    "calling codes"
   ],
   "devDependencies": {
     "@babel/core": "^7.5.4",
