Give more mention to M49 codes

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "reverse geocoder",
     "country codes",
     "ISO 3166-1",
+    "United Nations M49",
     "geolocation",
     "calling codes"
   ],
