Enforce right-hand rule winding order for borders (close #18)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
+    "@mapbox/geojson-rewind": "^0.4.0",
     "which-polygon": "^2.2.0"
   },
   "scripts": {
