--- a/package.json
+++ b/package.json
@@ -16,29 +16,33 @@
     "dist/",
     "src/"
   ],
+  "type": "module",
   "source": "./src/country-coder.ts",
   "types": "./dist/country-coder.d.ts",
-  "exports": "./dist/country-coder.modern.js",
-  "main": "./dist/country-coder.js",
-  "module": "./dist/country-coder.module.js",
-  "unpkg": "./dist/country-coder.umd.js",
-  "devDependencies": {
-    "@mapbox/geojson-rewind": "^0.5.0",
-    "jest": "^27.0.3",
-    "jest-extended": "^0.11.2",
-    "microbundle": "^0.13.1",
-    "npm-run-all": "^4.0.0",
-    "prettier": "^2.0.5",
-    "shx": "^0.3.0"
-  },
+  "main": "./dist/country-coder.cjs.js",
+  "module": "./dist/country-coder.esm.js",
+  "browser": "./dist/country-coder.iife.js",
   "dependencies": {
     "which-polygon": "^2.2.0"
+  },
+  "devDependencies": {
+    "@mapbox/geojson-rewind": "^0.5.0",
+    "esbuild": "^0.12.6",
+    "jest": "^27.0.4",
+    "jest-extended": "^0.11.5",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.1",
+    "shx": "^0.3.3",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "all": "npm-run-all -s clean build pretty test",
     "clean": "shx rm -rf dist",
     "build": "npm-run-all -s format-json build:**",
-    "build:bundles": "microbundle --no-compress --external none",
+    "build:browser": "esbuild ./src/country-coder.ts --platform=browser --format=iife --global-name=countryCoder --bundle --sourcemap --outfile=./dist/country-coder.iife.js",
+    "build:cjs": "esbuild ./src/country-coder.ts --platform=node --format=cjs --bundle --outfile=./dist/country-coder.cjs.js",
+    "build:esm": "esbuild ./src/country-coder.ts --platform=neutral --format=esm --bundle --outfile=./dist/country-coder.esm.js",
+    "build:types": "tsc",
     "format-json": "node ./scripts/format-json.js",
     "test": "jest tests/*.js",
     "pretty": "prettier --write \"./{src,tests}/*.{ts,js}\""
@@ -49,13 +53,9 @@
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "**/dist/*.js",
-      "!**/node_modules/**"
+      "**/dist/country-coder.cjs.js"
     ],
     "coverageDirectory": "<rootDir>/.coverage",
-    "setupFilesAfterEnv": [
-      "jest-extended"
-    ],
     "verbose": true
   },
   "prettier": {
@@ -65,7 +65,6 @@
     "trailingComma": "none"
   },
   "engines": {
-    "node": ">=10",
-    "npm": ">=5.0.0"
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   }
 }
