--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
+  "include": ["src/*"],
+  "exclude": ["node_modules", "dist"],
   "compilerOptions": {
+    "module": "ES2020",
     "declaration": true,
-    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "outDir": "dist",
     "esModuleInterop": true,
-    "listEmittedFiles": true,
     "moduleResolution": "node",
     "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "removeComments": true,
     "resolveJsonModule": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
