--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ideditor/country-coder",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "Convert longitude-latitude pairs to ISO 3166-1 codes quickly and locally",
   "repository": "github:ideditor/country-coder",
   "license": "ISC",
@@ -19,8 +19,8 @@
   "type": "module",
   "source": "./src/country-coder.ts",
   "types": "./dist/country-coder.d.ts",
-  "main": "./dist/country-coder.cjs.js",
-  "module": "./dist/country-coder.esm.js",
+  "main": "./dist/country-coder.cjs",
+  "module": "./dist/country-coder.mjs",
   "browser": "./dist/country-coder.iife.js",
   "dependencies": {
     "which-polygon": "^2.2.0"
@@ -42,8 +42,8 @@
     "clean": "shx rm -rf dist",
     "build": "run-s format-json build:**",
     "build:browser": "esbuild ./src/country-coder.ts --platform=browser --format=iife --global-name=countryCoder --bundle --sourcemap --outfile=./dist/country-coder.iife.js",
-    "build:cjs": "esbuild ./src/country-coder.ts --platform=node --format=cjs --bundle --outfile=./dist/country-coder.cjs.js",
-    "build:esm": "esbuild ./src/country-coder.ts --platform=neutral --format=esm --bundle --external:which-polygon --outfile=./dist/country-coder.esm.js",
+    "build:cjs": "esbuild ./src/country-coder.ts --platform=node --format=cjs --bundle --sourcemap --outfile=./dist/country-coder.cjs",
+    "build:mjs": "esbuild ./src/country-coder.ts --platform=neutral --format=esm --bundle --sourcemap --external:which-polygon --outfile=./dist/country-coder.mjs",
     "build:types": "tsc",
     "format-json": "node ./scripts/format-json.js",
     "test": "jest --env=node --colors --coverage tests",
@@ -55,7 +55,7 @@
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "**/src/country-coder.ts"
+      "./src/country-coder.ts"
     ],
     "coverageDirectory": "<rootDir>/.coverage",
     "globals": {
@@ -68,9 +68,9 @@
       "js",
       "json"
     ],
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|ts?)$",
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(js|ts)$",
     "transform": {
-      "^.+\\.tsx?$": "ts-jest"
+      "^.+\\.ts$": "ts-jest"
     },
     "verbose": true
   },
