Make package exports even more clear with an export map

--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   "main": "./dist/country-coder.cjs",
   "module": "./dist/country-coder.mjs",
   "browser": "./dist/country-coder.iife.js",
+  "exports": {
+    "import": "./dist/country-coder.mjs",
+    "require": "./dist/country-coder.cjs",
+    "browser": "./dist/country-coder.iife.js"
+  },
   "dependencies": {
     "which-polygon": "^2.2.0"
   },
