--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   "devDependencies": {
     "@mapbox/geojson-rewind": "^0.5.0",
     "@types/jest": "^27.0.0",
-    "esbuild": "^0.12.6",
-    "jest": "^27.0.4",
+    "esbuild": "^0.12.19",
+    "esbuild-jest": "~0.5.0",
+    "jest": "^27.0.6",
     "jest-extended": "^0.11.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
     "shx": "^0.3.3",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "all": "run-s clean build pretty test",
@@ -49,7 +49,7 @@
     "build:mjs": "esbuild ./src/country-coder.ts --platform=neutral --format=esm --bundle --sourcemap --external:which-polygon --outfile=./dist/country-coder.mjs",
     "build:types": "tsc",
     "format-json": "node ./scripts/format-json.js",
-    "test": "jest --env=node --colors --coverage tests",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --colors",
     "pretty": "prettier --write \"./{src,tests}/*.{ts,js}\""
   },
   "publishConfig": {
@@ -58,22 +58,33 @@
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "./src/country-coder.ts"
+      "**/src/*.(ts|js)"
     ],
     "coverageDirectory": "<rootDir>/.coverage",
-    "globals": {
-      "ts-jest": {
-        "useESM": true
-      }
-    },
+    "coverageProvider": "v8",
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
     "moduleFileExtensions": [
       "ts",
       "js",
       "json"
     ],
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(js|ts)$",
+    "setupFilesAfterEnv": [
+      "jest-extended"
+    ],
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/tests/*.spec.(ts|js)"
+    ],
     "transform": {
-      "^.+\\.ts$": "ts-jest"
+      "^.+\\.ts$": [
+        "esbuild-jest",
+        {
+          "format": "esm",
+          "sourcemap": "true"
+        }
+      ]
     },
     "verbose": true
   },
