--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
     "which-polygon": "^2.2.0"
   },
   "devDependencies": {
-    "@mapbox/geojson-rewind": "^0.5.0",
-    "@types/jest": "^27.5.0",
-    "esbuild": "^0.14.38",
+    "@mapbox/geojson-rewind": "^0.5.2",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.12",
+    "esbuild": "^0.16.3",
     "esbuild-jest": "~0.5.0",
     "jest": "^29.3.1",
-    "jest-extended": "^2.0.0",
+    "jest-extended": "^3.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.1",
     "shx": "^0.3.4",
-    "typescript": "^4.6.4"
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "all": "run-s clean build pretty test",
@@ -95,6 +96,6 @@
     "trailingComma": "none"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": ">=16.14.0"
   }
 }
