--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
     "require": "./dist/country-coder.cjs"
   },
   "dependencies": {
-    "which-polygon": "^2.2.0"
+    "which-polygon": "^2.2.1"
   },
   "devDependencies": {
     "@mapbox/geojson-rewind": "^0.5.2",
-    "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.12",
-    "esbuild": "^0.16.3",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.2",
+    "esbuild": "^0.17.10",
     "esbuild-jest": "~0.5.0",
-    "jest": "^29.3.1",
-    "jest-extended": "^3.2.0",
+    "jest": "^29.4.3",
+    "jest-extended": "^3.2.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.4",
     "shx": "^0.3.4",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "all": "run-s clean build pretty test",
@@ -72,7 +72,7 @@
       "json"
     ],
     "setupFilesAfterEnv": [
-      "jest-extended"
+      "jest-extended/all"
     ],
     "testEnvironment": "node",
     "testMatch": [
