--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@ideditor/country-coder",
-  "version": "5.1.0",
+  "name": "@rapideditor/country-coder",
+  "version": "5.2.0",
   "description": "Convert longitude-latitude pairs to ISO 3166-1 codes quickly and locally",
-  "repository": "github:ideditor/country-coder",
+  "repository": "github:rapideditor/country-coder",
   "license": "ISC",
   "keywords": [
     "reverse geocoder",
@@ -31,10 +31,10 @@
   "devDependencies": {
     "@mapbox/geojson-rewind": "^0.5.2",
     "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.2",
-    "esbuild": "^0.17.10",
+    "@types/node": "^18.15.0",
+    "esbuild": "^0.17.11",
     "esbuild-jest": "~0.5.0",
-    "jest": "^29.4.3",
+    "jest": "^29.5.0",
     "jest-extended": "^3.2.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
