--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "jest": "^29.6.1",
     "jest-extended": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.0",
     "shx": "^0.3.4",
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "all": "run-s clean build pretty test",
+    "all": "run-s clean build test",
     "clean": "shx rm -rf dist",
     "build": "run-s format-json build:**",
     "build:browser": "esbuild ./src/country-coder.ts --platform=browser --format=iife --global-name=countryCoder --bundle --sourcemap --outfile=./dist/country-coder.iife.js",
@@ -50,8 +49,7 @@
     "build:mjs": "esbuild ./src/country-coder.ts --platform=neutral --format=esm --bundle --sourcemap --external:which-polygon --outfile=./dist/country-coder.mjs",
     "build:types": "tsc",
     "format-json": "node ./scripts/format-json.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --colors",
-    "pretty": "prettier --write \"./{src,tests}/*.{ts,js}\""
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --colors"
   },
   "publishConfig": {
     "access": "public"
@@ -88,12 +86,6 @@
       ]
     },
     "verbose": true
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "printWidth": 100,
-    "singleQuote": true,
-    "trailingComma": "none"
   },
   "engines": {
     "node": ">=16.14.0"
