Include 'types' in export map (closes #133)

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "module": "./dist/country-coder.mjs",
   "exports": {
     "import": "./dist/country-coder.mjs",
-    "require": "./dist/country-coder.cjs"
+    "require": "./dist/country-coder.cjs",
+    "types": "./dist/country-coder.d.ts"
   },
   "dependencies": {
     "which-polygon": "^2.2.1"
