--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
+/coverage
+/node_modules
+/dist
+
 .DS_Store
-.coverage
-.esm-cache
 .vscode
-.watchmanconfig
-
-node_modules/
-dist/
-
 npm-debug.log
 package-lock.json
