--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "@mapbox/geojson-rewind": "^0.5.2",
+    "@types/geojson": "^7946.0.16",
     "@types/node": "^22.10.2",
+    "@types/which-polygon": "^2.2.5",
     "c8": "^10.1.3",
     "esbuild": "^0.24.0",
     "npm-run-all": "^4.1.5",
