--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,16 +16,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ['20', '22', '24']
+        bun-version: ['1.3']
 
     steps:
     - uses: actions/checkout@v5
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v5
+    - name: Use Bun ${{ matrix.bun-version }}
+      uses: oven-sh/setup-bun@v2
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
+        bun-version: ${{ matrix.bun-version }}
+    - run: bun install
     - run: |
         echo "::remove-matcher owner=eslint-compact::"
         echo "::remove-matcher owner=eslint-stylish::"
-    - run: npm run all
+    - run: bun run all
