--- a/package.json
+++ b/package.json
@@ -31,30 +31,30 @@
   },
   "devDependencies": {
     "@mapbox/geojson-rewind": "^0.5.2",
+    "@types/bun": "^1.3.0",
     "@types/geojson": "^7946.0.16",
-    "@types/node": "^24.0.14",
     "@types/which-polygon": "^2.2.5",
-    "c8": "^10.1.3",
-    "esbuild": "^0.25.6",
     "npm-run-all": "^4.1.5",
     "shx": "^0.4.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "all": "run-s clean build test",
     "clean": "shx rm -rf dist",
     "build": "run-s format-json build:**",
-    "build:browser": "esbuild ./src/country-coder.ts --log-override:package.json=silent --platform=browser --format=iife --global-name=countryCoder --bundle --sourcemap --outfile=./dist/country-coder.iife.js",
-    "build:cjs": "esbuild ./src/country-coder.ts --log-override:package.json=silent --platform=node --format=cjs --bundle --sourcemap --external:which-polygon --outfile=./dist/country-coder.cjs",
-    "build:mjs": "esbuild ./src/country-coder.ts --log-override:package.json=silent --platform=neutral --format=esm --bundle --sourcemap --external:which-polygon --outfile=./dist/country-coder.mjs",
+    "build:browser": "bun build ./src/index.ts --target=browser --format=iife --minify --sourcemap=linked --outdir='./dist' --entry-naming='country-coder.iife.[ext]'",
+    "build:cjs": "bun build ./src/country-coder.ts --target=node --format=cjs --sourcemap=linked --external=which-polygon --outdir='./dist' --entry-naming='country-coder.c[ext]'",
+    "build:mjs": "bun build ./src/country-coder.ts --target=node --format=esm --sourcemap=linked --external=which-polygon --outdir='./dist' --entry-naming='country-coder.m[ext]'",
     "build:types": "tsc",
-    "format-json": "node ./scripts/format-json.js",
-    "test": "c8 node --test tests/*.js"
+    "format-json": "bun run ./scripts/format-json.js",
+    "prepare": "bun repl -e 'if (!Bun.semver.satisfies(Bun.version, `>=1.3.0`)) { console.error(`Project requires Bun version >=1.3.0`); process.exit(1) }'",
+    "test": "bun test --dots --coverage tests/*.ts"
   },
   "publishConfig": {
     "access": "public"
   },
   "engines": {
+    "bun": ">=1.3.0",
     "node": ">=20"
   }
 }
