--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/bun": "^1.3.0",
     "@types/geojson": "^7946.0.16",
     "@types/which-polygon": "^2.2.5",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^8.0.4",
     "shx": "^0.4.0",
     "typescript": "^5.9.3"
   },
