--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,3 +1,8 @@
 [install]
 # Only install package versions published at least 3 days ago
 minimumReleaseAge = 259200 # seconds
+
+[run]
+# equivalent to `bun --bun` for all `bun run` commands
+bun = true
+shell = "bun"
