--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "include": ["src/*"],
-  "exclude": ["node_modules", "dist"],
+  "include": ["src/country-coder.ts"],
   "compilerOptions": {
-    "module": "es2020",
+    "module": "esnext",
     "declaration": true,
     "emitDeclarationOnly": true,
     "outDir": "dist",
