Add local server
Bun has a builtin http server, so we can use it for local testing.
Just `bun start` or `bun run start` to test country-coder on localhost.

This also uses Bun's HTMLRewriter to rewrite the script src so that
any links to the CDN `dist/*` files get rewritten as local links when
testing this way.

--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "typescript": "^5.9.3"
   },
   "scripts": {
-    "all": "run-s clean builds test",
-    "clean": "rm -rf dist",
-    "builds": "run-s format build types",
+    "all": "run-s clean buildall test",
     "build": "bun ./scripts/build.ts",
+    "buildall": "run-s format build types",
+    "clean": "rm -rf dist",
     "format": "bun ./scripts/format-json.js",
+    "start": "bun ./scripts/server.ts",
     "test": "bun test --dots --coverage tests/*.ts",
     "types": "tsc"
   },
