Switch to using a cleanup script that can find more stuff.
This gets rid of all those anoying .DS_Store files too.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "all": "run-s clean buildall test",
     "build": "bun ./scripts/build.ts",
     "buildall": "run-s format build types",
-    "clean": "rm -rf dist",
+    "clean": "bun ./scripts/clean.ts",
     "format": "bun ./scripts/format-json.js",
     "start": "bun ./scripts/server.ts",
     "test": "bun test --dots --coverage tests/*.ts",
