--- a/package.json
+++ b/package.json
@@ -29,22 +29,27 @@
     "which-polygon": "^2.2.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@mapbox/geojson-rewind": "^0.5.2",
     "@types/bun": "^1.3.1",
     "@types/geojson": "^7946.0.16",
     "@types/which-polygon": "^2.2.5",
+    "eslint": "^9.38.0",
+    "globals": "^16.4.0",
     "npm-run-all2": "^8.0.4",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
   },
   "scripts": {
-    "all": "run-s clean build test",
+    "all": "run-s clean lint build test",
     "build": "run-s format build:js build:ts",
     "build:js": "bun ./scripts/build_js.ts",
     "build:ts": "tsc",
     "clean": "bun ./scripts/clean.ts",
     "format": "bun ./scripts/format-json.js",
+    "lint": "eslint ./scripts ./src ./test",
     "start": "bun ./scripts/server.ts",
-    "test": "bun test --dots --coverage tests/*.ts"
+    "test": "bun test --dots --coverage ./test"
   },
   "publishConfig": {
     "access": "public"
