--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@rapideditor/country-coder",
   "version": "5.6.0",
   "description": "Convert longitude-latitude pairs to ISO 3166-1 codes quickly and locally",
-  "repository": "github:rapideditor/country-coder",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rapideditor/country-coder.git"
+  },
   "license": "ISC",
   "keywords": [
     "reverse geocoder",
@@ -29,16 +32,16 @@
     "which-polygon": "^2.2.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
+    "@eslint/js": "^9.39.1",
     "@mapbox/geojson-rewind": "^0.5.2",
-    "@types/bun": "^1.3.1",
+    "@types/bun": "^1.3.4",
     "@types/geojson": "^7946.0.16",
     "@types/which-polygon": "^2.2.5",
-    "eslint": "^9.38.0",
-    "globals": "^16.4.0",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
     "npm-run-all2": "^8.0.4",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2"
+    "typescript-eslint": "^8.49.0"
   },
   "scripts": {
     "all": "run-s clean lint build test",
