--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: build
 
 on:
   push:
-    branches: [ main ]
+    branches: ['main']
   pull_request:
-    branches: [ main ]
+    branches: ['main']
 
 env:
   FORCE_COLOR: 2
@@ -13,19 +13,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        bun-version: ['1.3']
-
     steps:
-    - uses: actions/checkout@v6
-    - name: Use Bun ${{ matrix.bun-version }}
-      uses: oven-sh/setup-bun@v2
-      with:
-        bun-version: ${{ matrix.bun-version }}
-    - run: bun install
     - run: |
         echo "::remove-matcher owner=eslint-compact::"
         echo "::remove-matcher owner=eslint-stylish::"
-    - run: bun run all
+
+    - name: 📥  Checkout
+      uses: actions/checkout@v4
+
+    - name: 🥟  Setup Bun
+      uses: oven-sh/setup-bun@v2
+
+    - name: 🏗️  Install
+      run: bun install
+
+    - name: 🔨  Build and Test
+      run: bun run all
